FIX: Gsap profession animation on mobile view

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,7 +5,6 @@ body{
     width: 100vw;
     overflow-x: hidden;
     header{
-        background-color: #fff;
         width: 100vw;
         height: 100vh;
         .navigation-menu {
@@ -19,7 +18,6 @@ body{
             top: 2.5%;
             left: 5%;
             .name{
-                background-color: #fff;
                 margin-top: 0;
                 padding: 0;
                 height: 22px;
@@ -29,25 +27,35 @@ body{
                 padding-left: 5px;
             }
             .profession {
-                box-shadow: inset 0 0 0 #000;
+                overflow: hidden;
                 height: 28px;
-                
                 padding-left: 3px;
-                transition: box-shadow ease-out 0.6s;
-                outline: none;
                 span {
-                  transition: color ease-out 0.6s;
-                  color: #000;
+                  transition: 2s;
                   font-size: 16px;
                   font-weight: 500;
                   line-height: 28px;
+                  color: #fff;
                 }
             }
-            .profession-active {
-              box-shadow: inset 158px 0 0 0 #000;
-              span {
-                color: #fff;
-              }
+            .profession::before{
+              content: '';
+              position: absolute;
+              top: 22px;
+              left: 0;
+              bottom: 0;
+              right: 0;
+              width: 158px;
+              height: 28px;
+              background-color: #000;
+              z-index: -1;
+              transform: scaleX(0);
+              transform-origin: left;
+              transition: transform 1s;
+            }
+            .profession-active::before {
+              transform: scaleX(1);
+              background-color: #000;
             }
         }
         .hamburger {
